--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>DataScience with Python - Authors</title>
+        <title>data science with python - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,35 +12,25 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">DataScience with Python </a></h1>
+                <h1><a href="/">data science with python </a></h1>
                 <nav><ul>
-                    <li><a href="/category/data-science.html">Data science</a></li>
+                    <li><a href="/category/setting-up.html">Setting Up</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on DataScience with Python</h1>
+    <h1>Authors on data science with python</h1>
     <ul>
         <li><a href="/author/leotis-buchanan.html">Leotis Buchanan</a> (1)</li>
     </ul>
 </section>
 
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://ca.linkedin.com/pub/leotis-buchanan/aa/546/6bb">linkedin</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
